--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
         <h1>New Registration</h1>
-    <form action="#" enctype="multipart/form-data">
+    <form action="personal.html" enctype="multipart/form-data">
         <label>First Name: </label> 
         <input type="text"  name="first_name" id="f_id" placeholder="EnterF First Name" required /><br></br>
         <label>Last Name: </label>
