--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input type="text"  name="first_name" id="f_id" placeholder="EnterF First Name" required /><br></br>
         <label>Last Name: </label>
         <input type="text" name="last_name" id="last_id" placeholder="Enter Last Name" required />
-
+        <input type="button" name="Submit" value="submit">
     </form>
     </body>
 
